--- a/relinksys/web/src/app/admin/company-setting/company-setting.component.html
+++ b/relinksys/web/src/app/admin/company-setting/company-setting.component.html
@@ -74,7 +74,7 @@
                                                                 <mat-option value="CAD">CAD</mat-option>
                                                                 <mat-option value="AED">AED</mat-option>
                                                                 <mat-option value="OMR">OMR</mat-option>
-                                                                <mat-option value="FRw">RWF</mat-option>
+                                                                <mat-option value="RWF">RWF</mat-option>
 
                                                             </mat-select>
                                                             <mat-error>Select any currency</mat-error>
